# triforce

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
examples/: hosoya_triangle.py  lucas_pascal_triangle.py  pascal_triangle.py  wythoff_triangle.py
tests/: test_triangles.py
triforce/: constants.py  numeric.py  plots.py  pyramid.py  pyramids.py  sequences.py  triangle.py  triangles.py
